--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -14,7 +14,6 @@
 }
 
 .container .shadow .row .col-lg-6 img {
-    width: 100%;
-    height: 100%;
-    max-height: 27em;
+    max-width: 100%;
+    height: auto;
 }
