almost done with product display page

--- a/public/assets/css/navigation.css
+++ b/public/assets/css/navigation.css
@@ -283,6 +283,8 @@
 
 .footer_wrapper .first_section .col-lg-3 .content h3 {
     font-weight: 600;
+    color: #ECF3F7;
+    font-family: Roboto;
 }
 
 .footer_wrapper .second_section .container .row .col-lg-4 strong {
