--- a/public/assets/css/product.css
+++ b/public/assets/css/product.css
@@ -1,90 +1,124 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+.owl-theme .owl-dots {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
 }
 
-.slider-container {
-    position: relative;
-    overflow: hidden;
-    width: 100vw;
-    height: 100vh;
+.owl-theme .owl-dots .owl-dot:not(:first-child),
+.owl-theme .owl-dots .owl-dot:not(:last-child) {
+    margin: 0em 0.25em;
 }
 
-.left-slide {
-    height: 100%;
-    width: 35%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: transform 0.5s ease-in-out;
+.owl-theme .owl-dots .owl-dot:first-child {
+    margin-right: 0.25em;
+    margin-left: 0em;
 }
 
-.left-slide>div {
-    height: 100%;
+.owl-theme .owl-dots .owl-dot:last-child {
+    margin-left: 0.25em;
+    margin-right: 0em;
+}
+
+.owl-carousel .owl-item img {
+    height: 21em;
+}
+
+.owl-theme .owl-dots .owl-dot button {
+    display: inline-block;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-}
-
-.left-slide h1 {
-    font-size: 40px;
-    margin-bottom: 10px;
-    margin-top: -30px;
-}
-
-.right-slide {
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 35%;
-    width: 65%;
-    transition: transform 0.5s ease-in-out;
-}
-
-.right-slide>div {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    height: 100%;
-    width: 100%;
-}
-
-button {
-    background-color: #fff;
-    border: none;
-    color: #aaa;
-    cursor: pointer;
-    font-size: 16px;
-    padding: 15px;
-}
-
-button:hover {
-    color: #222;
-}
-
-button:focus {
     outline: none;
+    height: 80px;
+    overflow: hidden;
+    border-radius: 0.5em;
+    margin: 0;
 }
 
-.slider-container .action-buttons button {
+.owl-theme .owl-dots .owl-dot button img {
+    height: 80px;
+    max-width: 100%;
+    width: 100%;
+    transition: all 0.5s linear;
+    transform: scale3d(1, 1, 1);
+}
+
+.owl-theme .owl-dots .owl-dot button:hover img {
+    transform: scale3d(1.15, 1.15, 1);
+}
+
+.details_wrapper {
+    border-bottom: 1px solid lavender;
+}
+
+.details_wrapper .col-lg-10 h2 {
+    font-size: 24px;
+    font-family: 'Zilla Slab', serif;
+}
+
+.details_wrapper .col-lg-2 form button {
+    float: right;
+    font-size: 24px;
+    color: #ffb657;
+    border-radius: 1em;
+    height: 1.5em;
+    width: 1.5em;
+    text-align: center;
+}
+
+.uk-lightbox.uk-overflow-hidden.uk-lightbox-panel.uk-open {
+    z-index: 99999;
+}
+
+.uk-lightbox.uk-overflow-hidden.uk-lightbox-panel.uk-open ul li img {
+    width: 70vw;
+    height: 100%;
+}
+
+.details_wrapper .col-lg-2 form button:hover {
+    background: bisque;
+    text-decoration: none;
+}
+
+.description h4 {
+    font-size: 12px;
+    font-family: 'Poppins';
+    margin-top: 0.75em;
+    color: #ffa114;
+}
+
+.description p {
+    text-align: justify;
+    font-size: 12px;
+    font-family: 'Poppins';
+}
+
+.description p.ratings {
+    position: relative;
+    color: rgb(218, 218, 218);
+    margin: 0.7em 0em;
+}
+
+.description p.ratings .full:before {
+    content: '\f005';
+    font-size: 12px;
+    font-weight: 900;
+    font-family: 'Font Awesome 6 Free';
+    display: inline-block;
+}
+
+.description p.ratings .half:before {
+    content: '\f089';
+    font-size: 12px;
+    font-family: 'Font Awesome 6 Free';
+    font-weight: 900;
     position: absolute;
-    left: 35%;
-    top: 50%;
-    z-index: 100;
+    top: 0px;
 }
 
-.slider-container .action-buttons .down-button {
-    transform: translateX(-100%);
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+.description .price_wrapper {
+    font-size: 24px;
+    font-family: 'Zilla Slab';
+    font-weight: 600;
 }
 
-.slider-container .action-buttons .up-button {
-    transform: translateY(-100%);
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+.description .price_wrapper .currency {
+    margin-right: 0.15em;
 }
