--- a/public/assets/css/product.css
+++ b/public/assets/css/product.css
@@ -72,6 +72,10 @@
     height: 100%;
 }
 
+.details_wrapper {
+    margin-left: 1.25rem;
+}
+
 .details_wrapper .col-lg-2 form button:hover {
     background: bisque;
     text-decoration: none;
@@ -93,7 +97,7 @@
 .description p.ratings {
     position: relative;
     color: rgb(218, 218, 218);
-    margin: 0.7em 0em;
+    margin: 0.7em 1em 0.7em 0em;
 }
 
 .description p.ratings .full:before {
@@ -117,8 +121,152 @@
     font-size: 24px;
     font-family: 'Zilla Slab';
     font-weight: 600;
+    margin: 0.7em 0em;
 }
 
 .description .price_wrapper .currency {
     margin-right: 0.15em;
+}
+
+.description form .quantity-input {
+    position: relative;
+}
+
+.description form .quantity-input input {
+    border: 1px solid lightgray;
+    padding: 0.5em 5em 0.5em 1em;
+    font-weight: 600;
+    font-family: 'Poppins';
+    font-size: 16px;
+    outline: none;
+    border-radius: 0.2em;
+}
+
+.description form .quantity-input input.parsley-error {
+    background: #993333;
+}
+
+.description form .quantity-input .parsley-errors-list li {
+    font-size: 0.9em;
+    line-height: 0.9em;
+    color: #B94A48;
+    font-style: italic;
+    font-family: 'Zilla Slab';
+    border-color: #d00000;
+    font-family: 'Zilla Slab';
+    border-color: #d00000;
+}
+
+.description form .quantity-input button {
+    user-select: none;
+    align-items: center;
+    justify-content: center;
+    outline: none;
+    cursor: pointer;
+    width: 2em;
+    height: 2em;
+    background-image: linear-gradient(to top, #D8D9DB 0%, #fff 80%, #FDFDFD 100%);
+    border-radius: 30px;
+    border: 1px solid #8F9092;
+    box-shadow: 0 4px 3px 1px #fcfcfc, 0 6px 8px #d6d7d9, 0 -4px 4px #cecfd1, 0 -6px 4px #fefefe, inset 0 0 3px 0 #cecfd1;
+    transition: all 0.2s ease;
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    color: #606060;
+    text-shadow: 0 1px #fff;
+    position: absolute;
+    top: 0.55em;
+}
+
+.description form .quantity-input button::-moz-focus-inner {
+    border: 0;
+}
+
+.description form .quantity-input button>* {
+    transition: transform 0.2s ease;
+}
+
+.description form .quantity-input button:hover {
+    box-shadow: 0 4px 3px 1px #FCFCFC, 0 6px 8px #D6D7D9, 0 -4px 4px #CECFD1, 0 -6px 4px #FEFEFE, inset 0 0 3px 3px #CECFD1;
+}
+
+.description form .quantity-input button:hover>* {
+    transform: scale(0.975);
+}
+
+.description form .quantity-input .btn-reduce {
+    left: 16em;
+}
+
+.description form .quantity-input .btn-increase {
+    left: 19em;
+}
+
+.description form .add_to_cart_btn {
+    display: block;
+    width: 100%;
+    text-align: center;
+    margin-top: 1em;
+    padding: 0.6em;
+    background: #184e77;
+    color: white;
+    font-weight: 600;
+    border-radius: 0.3em;
+    font-family: 'Zilla Slab';
+}
+
+.related_products .slick_container {
+    margin-bottom: 2em;
+    /* padding: 2em; */
+}
+
+.related_products .slick_container .item.slick-slide {
+    margin: 0em 0.5em;
+    width: 250px;
+}
+
+.related_products .slick_container .item.slick-slide a {
+    transition: all 0.6s ease-out;
+    display: inline-block;
+    width: 220px;
+    margin: 0.4em;
+    transform: scale(0.95);
+}
+
+.related_products .slick_container .item.slick-slide a:hover {
+    text-decoration: none;
+    color: #c60303;
+}
+
+.related_products .slick_container .item.slick-slide a img {
+    width: 100%;
+    height: 14em;
+}
+
+.related_products .slick_container .item.slick-slide a p {
+    font-family: 'Roboto';
+    font-size: 14px;
+    padding-left: 0.4em;
+    margin-bottom: 0;
+}
+
+.related_products .slick_container .item.slick-slide a span {
+    font-family: 'Zilla Slab', serif;
+    padding-left: 0.4em;
+    font-size: 13px;
+    font-weight: 600;
+    margin-bottom: 0.5em;
+}
+
+.container .col-lg-3 img.sales_off {
+    max-width: 100%;
+    width: 100%;
+    height: 28em;
+}
+
+@media screen and (max-width:425px) {
+    .description {
+        margin-left: 0em;
+    }
 }
