--- a/public/assets/css/cart.css
+++ b/public/assets/css/cart.css
@@ -260,6 +260,12 @@
     }
     .cart_container .container .order-details .col-lg-4 a {
         margin: 0.65em 0.5em;
-        width: 97.7%;
+        width: calc(100% - 1em);
+    }
+}
+
+@media screen and (max-width:425px) {
+    .cart_container .container .item_wrapper {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
