--- a/public/assets/css/register.css
+++ b/public/assets/css/register.css
@@ -1,43 +1,43 @@
-.form_wrapper {
+.form_container {
     /* background: url('../images/freestocks-_3Q3tsJ01nc-unsplash.jpg'); */
     padding: 3em 5em;
 }
 
-.form_wrapper h3 {
+.form_container h3 {
     margin-top: 0.6em;
     font-size: 2em;
     color: #ee9b00;
     font-family: Calistoga;
 }
 
-.form_wrapper form {
+.form_container form {
     margin: 2em 1em 1em;
 }
 
-.form_wrapper form div.form-group {
+.form_container form div.form-group {
     display: grid;
     grid-template-columns: 25% 75%;
     align-items: baseline;
 }
 
-.form_wrapper label {
+.form_container label {
     display: block;
     text-align: left;
 }
 
-.form_wrapper input.form-control:focus {
+.form_container input.form-control:focus {
     outline: none;
     box-shadow: none;
     border-color: #023e8a;
 }
 
-.form_wrapper img {
+.form_container img {
     height: 100%
 }
 
 .container .shadow .row .col-lg-6 img {
     max-width: 100%;
-    height: auto;
+    height: 100%;
 }
 
 .container .shadow .row .col-lg-6 form button {
@@ -53,10 +53,11 @@
     justify-content: center;
     border: 1px solid #111156;
     border-radius: 0.4em;
-    padding: 0.2em;
+    padding: 0.4em 0.2em;
     font-family: 'Roboto';
     font-weight: 600;
     font-size: 13px;
+    margin: 0.5em 0em;
 }
 
 .container .shadow .row .col-lg-6 form .google:hover {
@@ -66,4 +67,5 @@
 
 .container .shadow .row .col-lg-6 form .google img {
     width: 2em;
+    height: 1.5em;
 }
