--- a/public/assets/css/shop.css
+++ b/public/assets/css/shop.css
@@ -46,76 +46,42 @@
     font-family: 'Zilla Slab';
 }
 
-.price_section .ui-widget-header {
-    height: 4px !important;
-    background: #ee740b;
+
+.price_section .range-bar {
+    border: none;
+    background: #000;
+    height: 3px;
+    width: 96%;
+    margin-left: 8px;    
 }
 
-.price_section .ui-state-default,
-.price_section .ui-widget-content .ui-state-default,
-.price_section .ui-widget-header .ui-state-default {
-    border: 1px solid #c3c3c3;
-    border-radius: 13px;
-    background: #fff;
-}
-
-.price_section .ui-widget-content {
-    height: 2px !important;
-    border: 0;
-    background: #e0e0da;
-}
-
-.price_section .ui-slider-horizontal .ui-slider-range {
-    top: -2px;
+.price_section .ui-slider-range {
+    background: #06b9c0;
 }
 
 .price_section .ui-slider-horizontal .ui-slider-handle {
-    top: -10px;
+    border: none;
+    border-radius: 25px;
+    background: #fff;
+    border: 2px solid #06b9c0;
+    height: 17px;
+    width: 17px;
+    top: -0.5em;
     cursor: pointer;
 }
 
-.price_section .ui-slider-handle {
-    outline: none;
+.price_section .ui-slider-horizontal .ui-slider-handle + span {
+    background: #06b9c0;
 }
 
-.price_section .ui-slider-handle .amount {
-    position: absolute;
-    left: 0;
-    top: 35px;
-    display: none;
-    width: 130px;
-    padding: 10px 0;
-    text-align: center;
-    margin-left: -55px;
-    font-weight: normal;
-    font-size: 14px;
-    color: #fff;
-    border: 1px solid #f52929;
-    background: #f52929;
-}
-
-.price_section .ui-slider-handle .amount:after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: -11px;
-    left: 50%;
-    right: 0;
-    width: 0;
-    height: 0;
-    margin-left: -5px;
-    border-bottom: 5px solid #f10000;
-    border-top: 5px solid transparent;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    background-color: #fff;
-}
 
 .price_section .min-range {
     float: left;
     padding-top: 20px;
     font-size: 12px;
     color: #888;
+    margin-left: 0.5em;
+
 }
 
 .price_section .max-range {
@@ -123,14 +89,11 @@
     padding-top: 20px;
     font-size: 12px;
     color: #888;
+    margin-right: 0.5em;
+
 }
 
-.price_section .slider-range-wrap {
-    position: relative;
-    height: 7em;
-    margin: 0 auto;
-    padding: 40px 20px 0px 20px;
-}
+
 
 .discount_section form .form-group {
     margin: 0.5em 0em;
